# UI2

./: CMakeLists.txt  PlayerSlider.cpp  PlayerSlider.h  buttom_label.h  the_button.cpp  the_button.h  the_player.cpp  the_player.h  tomeo.cpp
